<resources>
    <string name="app_name">Acquedotto Lucano spa</string>

    <string name="stringUser">USERNAME</string>
    <string name="stringPassword">PASSWORD</string>
    <string name="stringLogin">LOGIN</string>
    <string name="stringLocalizza">REC</string>
    <string name="stringSalva">SALVA</string>
    <string name="stringFoto">FOTO</string>
    <string name="stringaTipologiaAttivita">Tipologia Attività</string>
    <string name="stringaNote">Note</string>
    <string name="stringaRilevatore">Rilevatore</string>
    <string name="stringaErrore">ERRORE</string>
    <string name="stringaSi">SI</string>
    <string name="stringaNo">NO</string>
    <string name="stringaAggiungiAttivita">AGGIUNGI ATTIVITA</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_camera">CameraActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_immagine">ImmagineActivity</string>

</resources>
