<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/fragmentLogin">

   <TextView
       android:layout_width="wrap_content"
       android:layout_height="40dp"
       android:text="@string/stringUser"
       android:textSize="20dp"
       android:textStyle="bold"
       android:gravity="center_vertical" />

    <EditText
        android:id="@+id/textUsername"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="text"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/stringPassword"
        android:textSize="20dp"
        android:textStyle="bold"
        android:gravity="center_vertical" />

    <EditText
        android:id="@+id/textPassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="numberPassword"
        android:maxLength="4"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bottoneLogin"
        android:text="@string/stringLogin"
        android:textSize="20dp"
        android:layout_gravity="end"
        android:layout_marginRight="@dimen/activity_vertical_margin"/>

</LinearLayout>
